[gd_scene load_steps=17 format=3 uid="uid://fr5rhwhao6rv"]

[ext_resource type="Script" uid="uid://bnfuvup24pfbv" path="res://Scripts/BaseUIComponents/FlyPostEditor.gd" id="1_q7c0i"]
[ext_resource type="Theme" uid="uid://4wnlucn420o6" path="res://Resources/Themes/ScrollContainer-Light.tres" id="2_p563m"]
[ext_resource type="PackedScene" uid="uid://bqabpg44ed0mq" path="res://Scenes/BaseUIComponents/SimpleHttpRequest.tscn" id="2_vvqjb"]
[ext_resource type="PackedScene" uid="uid://d2870yealvg0d" path="res://Scenes/ThemePainter.tscn" id="3_xhjh2"]
[ext_resource type="StyleBox" uid="uid://be525535a2wxl" path="res://Resources/Themes/Window-Light.tres" id="4_47g3m"]
[ext_resource type="PackedScene" uid="uid://cx75ylkifpdjf" path="res://Scenes/BaseUIComponents/LineEdit.tscn" id="5_evxi1"]
[ext_resource type="PackedScene" uid="uid://c7tf2uyqb86vx" path="res://Scenes/BaseUIComponents/SecureTextEdit.tscn" id="6_vvqjb"]
[ext_resource type="PackedScene" uid="uid://cd2hiax67rgqi" path="res://Scenes/BaseUIComponents/ComboBox.tscn" id="7_5oytf"]
[ext_resource type="StyleBox" uid="uid://mlyeyl3hw3ia" path="res://Resources/Themes/Window2-Light.tres" id="8_47g3m"]
[ext_resource type="Theme" uid="uid://d0mq5q5s16u37" path="res://Resources/Themes/SimpleButton-Light.tres" id="9_evxi1"]
[ext_resource type="Theme" uid="uid://dkyoh2iih75tg" path="res://Resources/Themes/AccentButton-Light.tres" id="10_vvqjb"]
[ext_resource type="PackedScene" uid="uid://brxq8kk53a3hx" path="res://Scenes/BaseUIComponents/ProgressBar.tscn" id="12_5oytf"]

[sub_resource type="Animation" id="Animation_47g3m"]
resource_name = "Show"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScrollContainer/MarginContainer:theme_override_constants/margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.3, 6),
"update": 0,
"values": [320, 64]
}

[sub_resource type="Animation" id="Animation_evxi1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScrollContainer/MarginContainer:theme_override_constants/margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [64]
}

[sub_resource type="Animation" id="Animation_vvqjb"]
resource_name = "Hide"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScrollContainer/MarginContainer:theme_override_constants/margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.3, 6),
"update": 0,
"values": [64, 320]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5oytf"]
_data = {
&"Hide": SubResource("Animation_vvqjb"),
&"RESET": SubResource("Animation_evxi1"),
&"Show": SubResource("Animation_47g3m")
}

[node name="FlyPostEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7c0i")

[node name="PostRequest" parent="." instance=ExtResource("2_vvqjb")]
unique_name_in_owner = true
progress_bar = NodePath("../ScrollContainer/MarginContainer/PanelContainer/ProgressBar")

[node name="Blackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_p563m")

[node name="ThemePainter" parent="ScrollContainer" instance=ExtResource("3_xhjh2")]

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 64

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("4_47g3m")

[node name="ThemePainter" parent="ScrollContainer/MarginContainer/PanelContainer" instance=ExtResource("3_xhjh2")]

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="BoardsBox" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_5oytf")]
unique_name_in_owner = true
layout_mode = 2

[node name="TitleEdit" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_evxi1")]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Title"

[node name="ContentEdit" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_vvqjb")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 289)
layout_mode = 2
size_flags_vertical = 3
scroll_fit_content_height = true

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("8_47g3m")

[node name="ThemePainter" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer" instance=ExtResource("3_xhjh2")]

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="CancelButton" type="Button" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("9_evxi1")
text = "CANCEL_NAME"

[node name="ThemePainter" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/CancelButton" instance=ExtResource("3_xhjh2")]

[node name="PublishButton" type="Button" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("10_vvqjb")
text = "PUBLISH_NAME"

[node name="ThemePainter" parent="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/PublishButton" instance=ExtResource("3_xhjh2")]

[node name="ProgressBar" parent="ScrollContainer/MarginContainer/PanelContainer" instance=ExtResource("12_5oytf")]
visible = false
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_5oytf")
}
autoplay = "Show"

[connection signal="request_completed" from="PostRequest" to="." method="_on_post_request_request_completed"]
[connection signal="item_changed" from="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/BoardsBox" to="." method="_on_boards_box_item_changed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/PublishButton" to="." method="_on_publish_button_pressed"]
